# state_control_vehicle

./: CMakeLists.txt  README.md  notes.txt  package.xml  traj.csv  traj_along_ground.m
config/: QuadrotorQ2_gains.yaml  QuadrotorQ2_gains2bar.yaml  controller_params.yaml  controllers.yaml  env_calib.yaml  hummingbird_gains.yaml  mav_manager_params.yaml  quadrotor_params.yaml  server_multimaster.yaml  server_multimaster.yaml.save  server_multimaster_ground.yaml  structure_params.yaml  tracker_params.yaml
include/: nano_kontrol2.h
include/trajectory/: trajectory.h
launch/: base.launch  functions  hover.sh  mav_manager_vio_qc.launch  quad.launch  simulator.launch  state_control.launch  state_control.launch.save  state_control_cooperative.launch  takeoff.sh  test.launch
src/: state_control.cpp  trajectory.cpp  window_visualizer_env.cpp
